--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
