--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mdast": "^4.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.3",
     "lucide-react": "^0.461.0",
     "mermaid": "^11.4.1",
     "mongoose": "^8.8.3",
@@ -43,6 +44,7 @@
     "remark-directive": "^3.0.0",
     "remark-emoji": "^5.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
@@ -59,6 +61,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
