--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mdast": "^4.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "dompurify": "^3.2.3",
     "lucide-react": "^0.461.0",
     "mermaid": "^11.4.1",
